<resources>
    <string name="home">Home</string>
    <string name="library">Library</string>
    <string name="liked">Liked</string>
    <string name="profile">Profile</string>
    <string name="app_name">PrepWise</string>
    <string name="level">Level</string>
    <string name="category">Category</string>
    <string name="questions">questions</string>
    <string name="article_book">Article/book</string>
    <string name="description">Description</string>
    <string name="free_trial">Free trial</string>
    <string name="enter_your_request">Enter your request</string>
    <string name="recommended_from_your_following">Recommended from your following</string>
    <string name="sets">Sets</string>
    <string name="resources">Resources</string>
    <string name="your_activity">Your activity</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="enter_your_credential_for_login">Enter your credential for login</string>
    <string name="Login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or">or</string>
    <string name="continue_with_Google">Continue with Google</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="create_your_account">Create your account</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="location">Location</string>
    <string name="my_people">My People</string>
    <string name="support">Support</string>
    <string name="prepWise_premium">PrepWise Premium</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="log_out">Log out</string>
    <string name="delete_account">Delete account</string>
    <string name="question_for_email">Question</string>
    <string name="Activity">Activity</string>
    <string name="new_followers">New followers</string>
    <string name="you_have_won_an_award">You have won an award</string>
    <string name="you_have_studied_5_modules">You have studied 5 modules. A new profile frame is available to you.</string>
    <string name="you_have_created_a_new_activity_thread">You have created a new activity thread</string>
    <string name="you_have_received_a_help_request">You have received a help request</string>
    <string name="can_you_help_me_with_this_question_please">Can you help me with this question please?
Сlick to view questions -></string>
    <string name="you_have_received_an_answer_to_your_request">You have received an answer to your request</string>
    <string name="here_is_my_answer_maybe_it_will_help">Here is my answer, maybe it will help.
Сlick to view answers -></string>
    <string name="new_folder">New folder</string>
    <string name="edit_folder">Edit folder</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="by">by</string>
    <string name="new_question">New question</string>
    <string name="incoming">Incoming</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="new_question_set">New question set</string>
    <string name="new_resource">New resource</string>
    <string name="name_article_book">Name article/book</string>
    <string name="question_set">Question set</string>
    <string name="folder">Folder</string>
    <string name="resource">Resource</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="dont_have_an_account">Don`t have an account? </string>
    <string name="choose_language">Choose language</string>
    <string name="folders">Folders</string>
    <string name="shared">Shared</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="search_your_sets">Search your sets</string>
    <string name="search_your_folders">Search your folders</string>
    <string name="search_shared_sets">Search shared sets</string>
    <string name="search_your_resources">Search your resources</string>
    <string name="premium">PREMIUM</string>
    <string name="you_will_receive">You will receive:</string>
    <string name="unlimited_search_results">unlimited search results</string>
    <string name="unlimited_sets">unlimited sets</string>
    <string name="unlimited_number_of_questions_in_the_set">unlimited number of questions in the set</string>
    <string name="the_ability_to_share_access_to_the_set">the ability to share access to the set</string>
    <string name="one_month">1 Month</string>
    <string name="three_day_free_trial">3 day free trial</string>
    <string name="per_month">per month</string>
    <string name="one_year">1 Year</string>
    <string name="save_20">Save 20%</string>
    <string name="per_year">per year</string>
    <string name="subscribe_now">SUBSCRIBE NOW</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="friends">Friends</string>
    <string name="accept">Accept</string>
    <string name="follow_back">Follow back</string>
    <string name="private_str">private</string>
    <string name="public_str">public</string>
    <string name="view_profile">View profile</string>
    <string name="sharing">sharing</string>
    <string name="view">view</string>
    <string name="edit">edit</string>
    <string name="author">Author:</string>
    <string name="co_authors">Co-authors:</string>
    <string name="select_category">Select category</string>
    <string name="select_level">Select level</string>
    <string name="select_visibility">Select visibility</string>
    <string name="select_set">Select set</string>
    <string name="apply">Apply</string>
    <string name="without_category">without category</string>
    <string name="select_up_to_3_categories">Select up to 3 categories</string>
    <string name="progress_learning">Progress learning</string>
    <string name="known">Known</string>
    <string name="still_learning">Still learning</string>
    <string name="study_flashcards">Study flashcards</string>
    <string name="forgot_password_">Forgot password</string>
    <string name="please_enter_your_email_to_reset_the_password">Please enter your email to reset the password</string>
    <string name="reset_password">Reset password</string>
    <string name="set_a_new_password">Set a new password</string>
    <string name="create_a_new_password">Create a new password. Ensure it differs from previous ones for security</string>
    <string name="update_password">Update password</string>
    <string name="confirm_email">Confirm email</string>
    <string name="we_sent_a_confirm_4_digit_code_to">We sent a confirm 4 digit code to</string>
    <string name="confirm">Confirm</string>
    <string name="share">share</string>
    <string name="export_to_pdf">export to pdf</string>
    <string name="reset_progress">reset progress</string>
    <string name="Reset_progress">Reset progress</string>
    <string name="add_to_folder">add to folder</string>
    <string name="report">report</string>
    <string name="delete">delete</string>
    <string name="Delete">Delete</string>
    <string name="select_folder">Select folder</string>
    <string name="are_you_sure_you_want_to_delete_this_set">Are you sure you want to delete this set?</string>
    <string name="are_you_sure_you_want_to_delete_this_folder">Are you sure you want to delete this folder?</string>
    <string name="are_you_sure_you_want_to_delete_this_resource">Are you sure you want to delete this resource?</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out?</string>
    <string name="are_you_sure_you_want_to_reset_progress">Are you sure you want to reset your learning progress?</string>
    <string name="report_this_set">Report this set</string>
    <string name="please_select_a_reason">Please select a reason</string>
    <string name="why_are_you_reporting_this">Why are you reporting this?</string>
    <string name="it_contains_inaccurate_information">It contains inaccurate information</string>
    <string name="it_is_inappropriate">It is inappropriate</string>
    <string name="it_is_being_used_to_cheat">It is being used to cheat</string>
    <string name="it_violates_my_intellectual_property_rights">It violates my intellectual property rights</string>
    <string name="Report">Report</string>
    <string name="answers">Answers</string>
    <string name="send_request">Send request</string>
    <string name="select_friend">Select friend</string>
    <string name="search_friend">Search friend</string>
    <string name="ask_for_help">ask for help</string>
    <string name="look_answer">look answer</string>
    <string name="edit_set">Edit question set</string>
    <string name="view_flashcards">View flashcards</string>
    <string name="continue_studying_the_set">Continue studying the flashcards</string>
    <string name="return_to_set">Return to set</string>
    <string name="attention">Attention</string>
    <string name="all_questions_in_this_set_have_already_been_studied">All questions in this set have already been studied!</string>
    <string name="other">Other</string>
    <string name="describe_your_reason">Describe your reason</string>
    <string name="please_enter_your_reason">Please enter your reason</string>
    <string name="support_request">Support Request</string>
    <string name="type_your_message_here">Type your message here...</string>
    <string name="please_describe_your_issue_or_question_below">Please describe your issue or question below, and our support team will
get back to you as soon as possible.</string>
    <string name="send">Send</string>
    <string name="question_sent">Question sent</string>
    <string name="please_enter_a_question">Please enter a question</string>
    <string name="are_you_sure_you_want_to_delete_account">Are you sure you want to delete account?</string>
    <string name="continue_viewing_the_set">Continue viewing the flashcards</string>
    <string name="reviewed">Reviewed</string>
    <string-array name="low_phrases">
        <item>Don`t give up! Practice makes perfect!</item>
        <item>Just the beginning, keep pushing!</item>
        <item>You`re on your way, keep practicing!</item>
        <item>Every mistake is a step closer to success!</item>
        <item>Great start! Keep working on it!</item>
    </string-array>
    <string-array name="medium_phrases">
        <item>You`re doing well, keep it up!</item>
        <item>Almost there! Just a bit more effort!</item>
        <item>Solid progress! Don`t stop now!</item>
        <item>You`re improving! Keep up the great work!</item>
        <item>On the right track! Stay focused!</item>
    </string-array>
    <string-array name="high_phrases">
        <item>Amazing! You`re a pro at this!</item>
        <item>Almost perfect! Well done!</item>
        <item>Outstanding! Keep up the excellent work!</item>
        <item>Master level! You`ve got this!</item>
    </string-array>
    <string name="created_old_new">Date (old -> new)</string>
    <string name="created_new_old">Date (new -> old)</string>
    <string name="name_a_z">Name (A -> Z)</string>
    <string name="name_z_a">Name (Z -> A)</string>
    <string name="Default">Default</string>
    <string name="alphabetical">Alphabetical</string>
    <string name="by_status">By status</string>
    <string name="monday">M</string>
    <string name="tuestay">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">T</string>
    <string name="friday">F</string>
    <string name="saturday">S</string>
    <string name="sunday">S</string>
</resources>