<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/white_rounded_background"
    android:orientation="vertical"
    android:padding="25dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp">

        <ImageView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/close" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/regular"
            android:text="Report this set"
            android:textColor="@color/black"
            style="@style/bold_20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="2dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/why_are_you_reporting_this"
        android:textColor="@color/black"
        style="@style/regular_16"
        android:layout_marginBottom="20dp" />

    <RadioGroup
        android:id="@+id/reason_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            style="@style/regular_16"
            android:text="@string/it_contains_inaccurate_information"
            android:fontFamily="@font/regular" />

        <RadioButton
            style="@style/regular_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/regular"
            android:text="@string/it_is_inappropriate"
            android:textColor="@color/black" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            style="@style/regular_16"
            android:text="@string/it_is_being_used_to_cheat"
            android:fontFamily="@font/regular" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            style="@style/regular_16"
            android:layout_marginBottom="10dp"
            android:text="@string/it_violates_my_intellectual_property_rights"
            android:fontFamily="@font/regular" />

        <RadioButton
            android:id="@+id/other"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:textColor="@color/black"
            style="@style/regular_16"
            android:text="@string/other"
            android:fontFamily="@font/regular" />

        <EditText
            android:id="@+id/other_reason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            style="@style/regular_16"
            android:layout_marginStart="27dp"
            android:visibility="gone"
            android:hint="@string/describe_your_reason"
            android:inputType="textMultiLine" />
    </RadioGroup>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/Report"
        android:backgroundTint="@color/green"
        android:textColor="@color/white"
        style="@style/regular_16"/>
</LinearLayout>
