<!-- res/layout/popup_sort_menu.xml -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/white_rounded_background"
    android:padding="10dp">

    <TextView
        android:id="@+id/sort_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Default"
        style="@style/regular_16"
        android:padding="8dp"
        android:background="?attr/selectableItemBackground"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DBDBDB"/>

    <TextView
        android:id="@+id/sort_alphabetical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alphabetical"
        android:padding="8dp"
        style="@style/regular_16"
        android:background="?attr/selectableItemBackground"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DBDBDB"/>

    <TextView
        android:id="@+id/sort_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/by_status"
        android:padding="8dp"
        style="@style/regular_16"
        android:background="?attr/selectableItemBackground"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>
